[package]
name = "testrunner-68k"
version = "0.1.0"
authors = ["Mikael Kalms <mikael@kalms.org>"]
edition = "2018"

[build-dependencies]
bindgen = "0.49.0"

[dependencies]
amiga_hunk_parser = { git = "https://github.com/kalmalyzer/amiga_hunk_parser" }
lazy_static = "1.3.0"
serial_test = "0.2.0"
serial_test_derive = "0.2.0"
