[package]
name = "testrunner-68k"
version = "0.0.0"
authors = ["Mikael Kalms <mikael@kalms.org>"]
edition = "2018"
description = "Test runner for Motorola 680x0 code"
homepage = "https://github.com/testrunner-68k/testrunner-68k"
license = "MIT"

[build-dependencies]
bindgen = "0.49.0"

[dependencies]
amiga_hunk_parser = { git = "https://github.com/kalmalyzer/amiga_hunk_parser" }
lazy_static = "1.3.0"
serial_test = "0.2.0"
serial_test_derive = "0.2.0"
clap = "2.33.0"
ansi_term = "0.11.0"
